i can't even believe
ACTULLAY 100% OPEN FOR BUSINESS THIS TIME

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ table,th,td {border-spacing:0px;}
 </svg>
 </td>
 <td style='vertical-align:top'>
-	<a href='http://stellhex.github.io/Trixels-Lite/readme.html'>README</a>
+	<a href='http://stellhex.github.io/trixels/readme.html'>README</a>
 </td>
 </tr>
 </table>
